[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/back.png" type="Texture" id=1]
[ext_resource path="res://sprites/undo.png" type="Texture" id=2]
[ext_resource path="res://sprites/restart.png" type="Texture" id=3]
[ext_resource path="res://scripts/control_buttons.gd" type="Script" id=4]

[node name="ControlButtons" type="Control"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 348.0
margin_bottom = 80.0

[node name="ButtonRestart" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 80.0
size_flags_horizontal = 6
size_flags_vertical = 8
texture_normal = ExtResource( 3 )

[node name="ButtonUndo" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 141.0
margin_top = 16.0
margin_right = 205.0
margin_bottom = 80.0
size_flags_horizontal = 6
size_flags_vertical = 8
texture_normal = ExtResource( 2 )

[node name="ButtonBack" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 259.0
margin_top = 16.0
margin_right = 323.0
margin_bottom = 80.0
size_flags_horizontal = 6
size_flags_vertical = 8
texture_normal = ExtResource( 1 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonUndo" to="." method="_on_ButtonUndo_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
